--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
+.App{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
 .Header{
     display: flex;
     justify-content: space-between;
-    width: 100vw;
+    width: 1300px;
     height: 100vh;
     flex-direction: column;
     position: relative;
@@ -90,6 +96,7 @@ gap: 10px;
     color: white;
     font-weight: bolder;
     font-size: 17px;
+    backdrop-filter: blur(5px);
 }
 .para > p{
     color: white;
@@ -108,4 +115,61 @@ gap: 10px;
 }
 .midheader > p{
     font-size: 24px;
+}
+.vehiclescomp{
+    width: 1300px;
+    background-color: red;
+    height: 100vh;
+}
+.vehiclesloop{
+    width: 100%;
+    height: 100%;
+    border: 2px solid black;
+}
+.vehiclecontainer{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.vehiclecontainer > img{
+z-index: -1;
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+ .vehiclecontainer >.btnsinfo1{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0%;
+    left: 0%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5% 0px;
+    flex-direction: column;
+    /* border: 2px solid green; */
+}
+.cardetails{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.cardetails > h1{
+    font-size: 45px;
+    /* color: white; */
+}
+.cardetails > p{
+    font-size: 19px;
+    font-weight: bold;
+}
+.buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+.buttons > .btns{
+display: flex;gap: 10px;
+text-align: center;
 }
