--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+  
     z-index: 101;
     height: min-content;
     /* border: 2px solid red; */
@@ -193,3 +194,55 @@ padding: 25px 0;
     justify-content: center;
 
 }
+.maincontainer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    height: 85%;
+    /* border: 2px solid red; */
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+padding: 80px 0 0 20px ;  }
+  .maincontainer > .firstcontainer{
+    width: 60%;
+    /* border: 2px solid red; */
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    overflow-y: scroll;
+
+  }
+  .maincontainer > .secondcontainer{
+    width: 30%;
+    /* border: 1px solid blue; */
+    padding: 20px;
+  }
+  .firstcontainer > .firstbox{
+    width: 230px;
+    /* border: 1px solid green; */
+   
+  }
+  .text{
+    display: flex;
+    justify-content: space-around;
+    text-decoration: underline;
+    color: rgb(94, 94, 93);
+  }
+  .firstbox > img{
+    width: 100%;
+    /* height: 100%; */
+    object-fit: contain;
+  }
+  .secondcontainer > ul >li{
+    margin: 18px 0;
+    font-weight: 800;
+  }
+  .secondcontainer > ul >li:hover{
+    text-decoration: underline;
+    
+  }
